chore: added auth && add ci
